--- a/notebooks/04-00.1-intro-unsupervised-learning.ipynb
+++ b/notebooks/04-00.1-intro-unsupervised-learning.ipynb
@@ -3,13 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "0b301df8",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
-    "# Unsupervised ML algorithms\n",
+    "# Supervised and unsupervised ML problems\n",
     "\n",
     "ML problems can be categorized in two main groups based on whether\n",
     "\"target\" values (also known as labels) are available or not.\n",
@@ -53,11 +49,7 @@
   {
    "cell_type": "markdown",
    "id": "e6c8e135",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# The K-means algorithm\n",
     "\n",
@@ -164,11 +156,7 @@
    "cell_type": "code",
    "execution_count": 54,
    "id": "72419069",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -183,11 +171,7 @@
   {
    "cell_type": "markdown",
    "id": "6ed23f7f",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Sample data that can be used for clustering"
    ]
@@ -196,11 +180,7 @@
    "cell_type": "code",
    "execution_count": 92,
    "id": "7d9f7c06",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -254,6 +234,134 @@
     "_ = plt.scatter(centroids[\"x\"],centroids[\"y\"],color='red', marker=\"o\", s=213)\n",
     "plt.title(\"Clustered points.\")\n",
     "_ = plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab1fdf93",
+   "metadata": {},
+   "source": [
+    "# The Elbow Method\n",
+    "\n",
+    "As we have seen in the above example when training a k-means model we need\n",
+    "to provide the desired number of clusters as a **hyperparameter** thus we \n",
+    "have to rely on intuition or trial an error to discover the centroids.\n",
+    "\n",
+    "An alternative way that can be used to discover the **optimal** number of\n",
+    "clusters is to use the **Elbow Method**\n",
+    "\n",
+    "Before we continue with the **Elbow Method** we need to define the following\n",
+    "new metrics that we use:\n",
+    "\n",
+    "- Distortion\n",
+    "\n",
+    "   The average of the squared distances from the centroids for all the data\n",
+    "   points.\n",
+    "\n",
+    "- Inertia\n",
+    "\n",
+    "   The sum of the squared distances from the centroids.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "15c54d64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.632639306154815"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kmeans.inertia_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def make_clustered_data(n_clusters, n_samples, cluster_std=3):\n",
+    "    features, _ = make_blobs(\n",
+    "        n_samples = n_samples,\n",
+    "        n_features = 2, \n",
+    "        centers = n_clusters,\n",
+    "        cluster_std = 5.8,\n",
+    "        shuffle = True\n",
+    "    )\n",
+    "\n",
+    "    return pd.DataFrame(features, columns=[\"x\", \"y\"])\n",
+    "\n",
+    "df = make_clustered_data(5, 400)\n",
+    "plt.scatter(df[\"x\"], df[\"y\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "for n_clusters in range(1, 10):\n",
+    "    kmeans = KMeans(n_clusters=n_clusters)\n",
+    "    kmeans.fit(df)\n",
+    "    print(n_clusters, kmeans.inertia_)\n",
+    "    \n",
+    "    "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "eea75155",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 43921.24833095626\n",
+      "2 25073.776508754338\n",
+      "3 17440.15006189052\n",
+      "4 14267.564003064444\n",
+      "5 11729.03466687978\n",
+      "6 9976.431747715862\n",
+      "7 8577.02274646873\n",
+      "8 7566.456152102596\n",
+      "9 6638.317941786655\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "for n_clusters in range(1, 10):\n",
+    "    kmeans = KMeans(n_clusters=n_clusters)\n",
+    "    kmeans.fit(df)\n",
+    "    print(n_clusters, kmeans.inertia_)\n",
+    "    \n",
+    "    "
    ]
   }
  ],
