--- a/notebooks/04-01.2-data-utils.ipynb
+++ b/notebooks/04-01.2-data-utils.ipynb
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "27b2e2cc",
+   "id": "f4625f34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a4d95668",
+   "id": "6331a206",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2206b32",
+   "id": "6500d217",
    "metadata": {},
    "source": [
     "In this dataset we easily see that algorithms take consider \n",
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "43d636d2",
+   "id": "e186a017",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8650f2cc",
+   "id": "28853f50",
    "metadata": {},
    "source": [
     "Despite scaling the data, the distribution remains the same:"
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e9176e46",
+   "id": "0f6204ea",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f7d1a764",
+   "id": "9d85626b",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6a87ee1c",
+   "id": "8ac577bc",
    "metadata": {},
    "outputs": [
     {
@@ -372,11 +372,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c82f6b26",
+   "id": "7b75a82a",
    "metadata": {},
    "source": [
     "\n",
-    "# Standarization\n",
+    "# Standarization (or normalization)\n",
     "\n",
     "Changes the values in such a way to created a distribution\n",
     "that is very close to normal.\n",
@@ -385,19 +385,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "390c84bb",
+   "id": "4367426c",
    "metadata": {},
    "source": [
-    "## Data Normalization\n",
-    "\n",
-    "Can be used  as either of the two above methods.\n",
     "\n",
     "## Related Scikit-Learn functions \n",
     "\n",
-    "- MinMaxScaler\n",
-    "- RobustScaler\n",
-    "- StandardScaler\n",
-    "- Nornalizer\n",
+    "\n",
+    "\n",
+    "[Standard Scaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html)\n",
+    "\n",
+    "[Min - Max Scaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html)\n",
+    "\n",
+    "[Robust Scaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html)\n",
+    "\n",
+    "[Normalizer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.normalize.html)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "## Examples of algorithms that will be benefited by scaling\n",
     "\n",
@@ -411,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ed3f7fd",
+   "id": "535387be",
    "metadata": {},
    "source": [
     "\n",
@@ -466,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac2c2cb4",
+   "id": "ca05111f",
    "metadata": {},
    "source": [
     "# Correlation\n",
