Adds the raisins.csv file.

--- a/notebooks/05-00.3-SVM-algorithm.ipynb
+++ b/notebooks/05-00.3-SVM-algorithm.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df05ca58",
+   "id": "08f95c01",
    "metadata": {},
    "source": [
     "# The prerequisites to understand SVM algorithm\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13f86c45",
+   "id": "f92fa4e0",
    "metadata": {},
    "source": [
     "# 2. How to move a line closer to a point\n",
@@ -180,32 +180,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b6a6b619",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# A simplified SVM algorithm\n",
     "\n",
-    "In this \n",
+    "In this document we will not delve into the implementation details of the \n",
+    "SVM algortithm.  To solve related problems we will use the **scikit learn** SVM \n",
+    "component which is among the most widely used libraries and is very well implemented.\n",
     "\n",
-    "- Pick a random line \n",
+    "Despite this, the steps to implement the SVM algorithm from scratch are not \n",
+    "difficult to follow and you are encouraged to do so for educational reasons\n",
+    "to improve your understanding of it.\n",
     "\n",
-    "and an adhoc expanding factor.\n",
+    "A high level description of the SVM algortigm is the following:\n",
     "\n",
-    "- Define a function to receive a point and a line a decide wheather\n",
-    "it is classified correctly or not \n",
+    "#### Hyperparameters\n",
     "\n",
-    "- For a suffiently large number of repetitions:\n",
+    "- Specify and adhoc **expanding factor** (small number close to 1)\n",
+    "- Specify the **learning rate** (small number close to 0.01)\n",
+    "\n",
+    "#### Initialization\n",
+    "\n",
+    "- Pick a random line (this will eventually become the Hyperplane)\n",
+    "\n",
+    "- Define a function to decide wheather a point is classified correctly.\n",
+    "\n",
+    "- Repeat the following loop for a suffiently large number of repetitions:\n",
     "\n",
     "    - Select a random point\n",
+    "    \n",
     "    - If the point is not classified correctly then:\n",
     "        - Move the line closer to the point \n",
     "        - Readjust the support vectors\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
