--- a/notebooks/05-00.1-intro-support-vector-machine.ipynb
+++ b/notebooks/05-00.1-intro-support-vector-machine.ipynb
@@ -139,7 +139,9 @@
     "\n",
     "as we can see the SVC class exposes many parameters and attributes and intead of \n",
     "trying to explain them up front we will describe them in an on going basis as we\n",
-    "we will need them for the examples we will be solving."
+    "we will need them for the examples we will be solving.\n",
+    "\n",
+    "## Read here about the effectiveness of SVM: http://yann.lecun.com/exdb/mnist/"
    ]
   },
   {
