Adds multiclassifer notebook images.

--- a/notebooks/06-01.1-SVM-mnist.ipynb
+++ b/notebooks/06-01.1-SVM-mnist.ipynb
@@ -33,58 +33,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "077535e9",
-   "metadata": {},
-   "source": [
-    "# Multi-Class Classification\n",
-    "\n",
-    "The easiest case to train a classification model appears when we have to\n",
-    "predict between two classes and we have seen examples using Logistic\n",
-    "Regression, Perceptrons or SVMs.  Some of the classical classifiers do not\n",
-    "natively support the ability to be trained for multiple classes\n",
-    "simultaneously.\n",
-    "\n",
-    "A common way to extend binary classifiers to multiple classes is to divide\n",
-    "the full dataset to multiple binary classification datasets and for each of\n",
-    "them build a separate model and to do so there are two ways to build \n",
-    "the necessary classifiers: **One vs rest** and **One vs One**\n",
-    "\n",
-    "Let's assume that we have N classes.\n",
-    "\n",
-    "\n",
-    "## One vs All\n",
-    "One vs all will train one classifier per class, meaning that in total we will need to train N classifiers.\n",
-    "\n",
-    "An example of this classifier we have already seen in the iris data set which had data samples for three different spicies of the same flower:\n",
-    "\n",
-    "- Setosa\n",
-    "- Virginica\n",
-    "- Versicolor\n",
-    "\n",
-    "in this case the model will be trained to make the followning 3 decissions:\n",
-    "\n",
-    "1. Is Setosa ? YES\n",
-    "2. Is Virginica? NO\n",
-    "3. Is Versicolor? NO\n",
-    "\n",
-    "which graphically can be represented with with following picture:\n",
-    "\n",
-    "\n",
-    "<img src=\"./images/one-to-many-classifier.png\" style=\"height:200px\"/>\n",
-    "\n",
-    "\n",
-    "## One vs One\n",
-    "One vs One we train a classifier for each pair of classes meaing\n",
-    "that we will end up with N * (N-1) / 2 classifiers.\n",
-    "\n",
-    "- Slower to train \n",
-    "- Better suitable ot unbalanced datasets\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 87,
    "id": "e904c04f",
@@ -124,7 +72,34 @@
    "id": "ae4ce8ab",
    "metadata": {},
    "source": [
-    "# Load the dataset "
+    "# Load the dataset \n",
+    "\n",
+    "The MNIST dataset can be loaded from many different repos on the internet.\n",
+    "\n",
+    "It is also part of the standard datasets in keras:\n",
+    "\n",
+    "```python\n",
+    "from keras.datasets import mnist\n",
+    "```\n",
+    "\n",
+    "and scikit as well:\n",
+    "\n",
+    "```python\n",
+    "from sklearn.datasets import load_digits\n",
+    "```\n",
+    "\n",
+    "the original data set can be downloaded from here:\n",
+    "\n",
+    "http://yann.lecun.com/exdb/mnist/\n",
+    "\n",
+    "For this notebook, I have downloaded the related from kaggle:\n",
+    "\n",
+    "https://www.kaggle.com/datasets/oddrationale/mnist-in-csv\n",
+    "\n",
+    "which makes our task a bit easier since it provides us with \"clean\" data\n",
+    "that are already presented in a numpu friendly way and we do not need\n",
+    "to transformt the binary image data to structured arrays which is what\n",
+    "we will be using to train the SVM models.\n"
    ]
   },
   {
@@ -139,6 +114,28 @@
     "all_data = pd.read_csv(\"./data/mnist_train.csv\")\n",
     "all_data = df.dropna()    \n",
     "all_labels = pd.DataFrame(all_data.pop(\"label\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23a28964",
+   "metadata": {},
+   "source": [
+    "### Data Description \n",
+    "\n",
+    "At this point we have two different dataframes holding the complete universe of the mnist data:\n",
+    "\n",
+    "#### all_data\n",
+    "\n",
+    "Holds the **features** that consist of a flat array of a $784$ dimentional vector.\n",
+    "\n",
+    "Each element of this vector corresponds to one **pixel** of a **28 X 28** grid that represents\n",
+    "a digit image.\n",
+    "\n",
+    "#### all_labels\n",
+    "\n",
+    "Holds the **labels** for each sample that exist in the **all_data** table; it is nothing more\n",
+    "that the digit that corresponds to the image meaning its value ranges from 0 - 9.\n"
    ]
   },
   {
@@ -912,7 +909,26 @@
    "id": "b7ccf111",
    "metadata": {},
    "source": [
-    "# Split the Data to testing and training data sets"
+    "# Split the Data to testing and training data sets\n",
+    "\n",
+    "As we always have to do, we separate the available data to two different \n",
+    "subsets:\n",
+    "\n",
+    "### Training DataSet\n",
+    "\n",
+    "Will be used to train the model; since the data in this set will become\n",
+    "known to the model they are increasing the possibility of overfitting (meaning\n",
+    "to come up with a model that knows very well the dataset but cannot generalize \n",
+    "well to unseen data).\n",
+    "\n",
+    "### Testing DataSet\n",
+    "\n",
+    "The testing data is a small portion of the full universe of available data (here we \n",
+    "chose to use 20% of it); these data will never be seen from the model during its\n",
+    "training phase.  \n",
+    "\n",
+    "We will use these data to verify the behavior of the model after it will be trained\n",
+    "to increase our confifence on it and its prediction accuracy."
    ]
   },
   {
@@ -948,7 +964,13 @@
    "id": "46baf2f1",
    "metadata": {},
    "source": [
-    "# Inspect the dataset"
+    "# Inspect the dataset\n",
+    "\n",
+    "\n",
+    "Check how \"balanced\" our dataset is in terms of the total number of\n",
+    "each label; we inspect both the training and testing data sets and \n",
+    "visually we can see that it looks balanced enought to the point of \n",
+    "not destruct the SVM model that we will try to train."
    ]
   },
   {
