Adds multiclassifer notebook images.

--- a/notebooks/06-01.2-intro-face-recognition.ipynb
+++ b/notebooks/06-01.2-intro-face-recognition.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "870f5313",
+   "id": "2b165a7d",
    "metadata": {},
    "source": [
-    "# A basic facial recogntion model using SVM and PCA\n",
+    "# A basic facial recognition model using SVM and PCA\n",
     "\n",
     "The next level after the recognizing digits using the MNIST data set is to\n",
     "apply SVM's to facial recognition.\n",
@@ -14,13 +14,30 @@
     "a basic approach to facial recognition; what we are seeing here is the first \n",
     "step towards learning **Computer Vision** which is done mostly with Deep CNN applied \n",
     "to advanced algorithms (like the YOLO family of Object detection algortithms) that we\n",
-    "will see in the next sessions in more detail.\n"
+    "will see in the next sessions in more detail.\n",
+    "\n",
+    "\n",
+    "# The dataset\n",
+    "\n",
+    "In this example we are using a preprossesed and introduction friendly\n",
+    "dataset that can be downloaded from here:\n",
+    "\n",
+    "http://vis-www.cs.umass.edu/lfw/lfw-funneled.tgz \n",
+    "\n",
+    "while the official site for it can be found here:\n",
+    "\n",
+    "http://vis-www.cs.umass.edu/lfw/\n",
+    "\n",
+    "Kaggle also provide a download if you like: https://www.kaggle.com/datasets/jessicali9530/lfw-dataset\n",
+    "\n",
+    "The dataset used in this example is a preprocessed excerpt of the “Labeled Faces in the Wild”, aka LFW:\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d2cee383",
+   "id": "1c2e880d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8911da9f",
+   "id": "24152e02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "14e068e9",
+   "id": "17def1db",
    "metadata": {},
    "outputs": [
     {
@@ -112,16 +129,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08a92af3",
+   "id": "459a13ec",
    "metadata": {},
    "source": [
-    "# Predict people based on unseen images"
+    "# Predicting people based on unseen images"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "81c11eb1",
+   "id": "3a1a17bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a04b2069",
+   "id": "5d062fc2",
    "metadata": {},
    "source": [
     "## Eigenfaces in Face Recognition\n",
@@ -156,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f2b403cc",
+   "id": "d797f939",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "468ebc1c",
+   "id": "e710b37d",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "088e04d3",
+   "id": "34c0607c",
    "metadata": {},
    "outputs": [],
    "source": []
