Adds multiclassifer notebook images.

--- a/notebooks/06-01.0-multi-class-classifier.ipynb
+++ b/notebooks/06-01.0-multi-class-classifier.ipynb
@@ -373,6 +373,10 @@
     "be trained quicker (when compared to the other types of SVC) as the size of the\n",
     "data is increasing.\n",
     "\n",
+    "## SGDClassifier sklearn\n",
+    "\n",
+    "Implements regularized linear models with stochastic gradient descent (SGD) learning: the gradient of the loss is estimated each sample at a time and the model is updated along the way with a decreasing strength schedule.\n",
+    "\n",
     "## How multiclass classification is handler by scikit SVC\n",
     "\n",
     "In its very basic theory SVM cannot solve multiclass classifiers \"out of the box\" as\n",
@@ -390,6 +394,72 @@
     "this here : https://scikit-learn.org/stable/modules/multiclass.html\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50843a94",
+   "metadata": {},
+   "source": [
+    "# A detailed comparison of scikit SVM classes\n",
+    "\n",
+    "\n",
+    "\n",
+    "| Name          | Complexity            | Out-of-core | Scaling | Kernel Trick |\n",
+    "|---------------|-----------------------|-------------|---------|--------------|\n",
+    "| LinearSVC     | O(m X n)              | No          | Yes     | No           |\n",
+    "| SGDClassifier | O(m X n)              | Yes         | Yes     | No           |\n",
+    "| SVC           | O(m2 X n) - O(m3 X n) | No          | Yes     | Yes          |\n",
+    "\n",
+    "The above table can be found in [Hands-On Machine Learning with Scikit-Learn](https://www.google.com/books/edition/Hands_On_Machine_Learning_with_Scikit_Le/bRpYDgAAQBAJ?hl=en&gbpv=1&dq=handson+machine+learning+with+scikit+learn+and+tensorflow&printsec=frontcover)\n",
+    "\n",
+    "\n",
+    "### Out of core\n",
+    "\n",
+    "Ability to train huge datasets that cannot fit in one machine’s main memory; data are load\n",
+    "iterably for each training step.\n",
+    "\n",
+    "### Feature Scaling\n",
+    "\n",
+    "With few exceptions training algorithms don’t perform well when the input numerical attributes have very different scales. The scaling process is about an algorithm to resise all the features in similiar and \n",
+    "directly comparable values.\n",
+    "\n",
+    "### Kernel Trick\n",
+    "\n",
+    "A mathematical technique that makes it possible to get the same result as if you added many polynomial features, even with very high degree polynomials.  Applies to  non linear data  that are projected onto a higher dimension space so as to make it easier to classify the data where it could be linearly divided by a plane. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37d27d52",
+   "metadata": {},
+   "source": [
+    "# Adjusting Hyperameters\n",
+    "\n",
+    "See also [RandomizedSearchCV](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.RandomizedSearchCV.html)\n",
+    "\n",
+    "This is a useful function provided by the Scikit frame work and is very handy when\n",
+    "we need to adjust hyperpameters for a model. \n",
+    "\n",
+    "Extract from the official documentation:\n",
+    "\n",
+    "```\n",
+    "RandomizedSearchCV implements a “fit” and a “score” method. It also implements “score_samples”, “predict”, “predict_proba”, “decision_function”, “transform” and “inverse_transform” if they are implemented in the estimator used.\n",
+    "\n",
+    "The parameters of the estimator used to apply these methods are optimized by cross-validated search over parameter settings.\n",
+    "\n",
+    "In contrast to GridSearchCV, not all parameter values are tried out, but rather a fixed number of parameter settings is sampled from the specified distributions. The number of parameter settings that are tried is given by n_iter.\n",
+    "\n",
+    "If all parameters are presented as a list, sampling without replacement is performed. If at least one parameter is given as a distribution, sampling with replacement is used. It is highly recommended to use continuous distributions for continuous parameters.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68fb66d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
