Adds books to bibliography.

--- a/notebooks/bibliography.ipynb
+++ b/notebooks/bibliography.ipynb
@@ -133,6 +133,21 @@
     "    </tr>\n",
     "    <tr>\n",
     "        <td>\n",
+    "            <img src=\"./images/pytorch-fastai.png\" style=\"float:center;width:120px;\"/>\n",
+    "        </td>\n",
+    "        <td>\n",
+    "            One of the best and more comprehensive books on pytorch and fastai.\n",
+    "        </td>\n",
+    "        <td>\n",
+    "            <img src=\"./images/natural-lang-pytorch.png\"\n",
+    "                 style=\"float:center;width:120px;\"/>\n",
+    "        </td>\n",
+    "        <td>\n",
+    "            Natural language processing using pytorch.\n",
+    "        </td>\n",
+    "    </tr>    \n",
+    "    <tr>\n",
+    "        <td>\n",
     "            <img src=\"./images/intro-to-genetic-algorithms.jpg\" style=\"float:center;width:120px;\"/>\n",
     "        </td>\n",
     "        <td>\n",
@@ -147,7 +162,10 @@
     "            Another older book I have read about genetic algorithms, antiquated by now..\n",
     "        </td>\n",
     "    </tr>\n",
-    "</table>"
+    "</table>\n",
+    "\n",
+    "    \n",
+    "\n"
    ]
   },
   {
